# rust_ge

./: .gitignore  Cargo.toml
core_engine/: Cargo.toml
core_engine/src/: engine.rs  lib.rs  mesh.rs  render_pipeline.rs  resource_manager.rs  shader_program.rs  texture.rs
core_engine/window/src/: keyboard_input.rs  mouse_input.rs  window.rs
glmath/src/: main.rs  tests.rs
glmath/src/glmath/: mat22.rs  mat33.rs  mat44.rs  mod.rs
res/: app_config.js  app_config.json
res/shaders/: GUIShader.frag  GUIShader.vert  ModelShader.frag  ModelShader.vert
serializers/: Cargo.toml
serializers/src/json/: lexer.rs  mod.rs  parser.rs  tests.rs
src/: main.rs
src/glmath/: mod.rs  rootable.rs  vec2.rs  vec3.rs  vec4.rs
src/window/: mod.rs
timer/src/: lib.rs
window/: Cargo.toml
window/src/: keyboard_input.rs  lib.rs  window.rs
