[package]
name = "game_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[dependencies.glmath]
path = "./glmath"

[dependencies.timer]
path = "./timer"

[dependencies.serializers]
path = "./serializers"

[dependencies.core_engine]
path = "./core_engine"