[package]
name = "window"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ogl33 = { version = "0.2.0", features = ["debug_error_checks"]}

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"
